robballen75-Salesforce/4-7-15/src/iTools State/Country Validation/objects/InSitu_Country__c.object
<CustomObject>
    <description>An iTools Country/State Validation custom object that contains Country information as defined by ISO 3166 and other supporting organizations.</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Name of the country in English.</description>
        <externalId>true</externalId>
        <label>Country Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISO_2A__c</fullName>
        <externalId>true</externalId>
        <label>ISO-2A</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISO_3A__c</fullName>
        <description>The 3 character ISO-3166 Code for the country</description>
        <externalId>true</externalId>
        <label>ISO-3A</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>af</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>az</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>be</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Province_Format__c</fullName>
        <description>Specifies the format to use to standardize the value in the Province field.</description>
        <label>Province Format</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Province_Usage__c</fullName>
        <description>Country specific validation rule for the province field. Determines whether the province value is required, optional or not used for a country.</description>
        <label>Province Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Not Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Specifies whether the country is actively used.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version_Date__c</fullName>
        <description>The date on which the current version was installed for the organization.</description>
        <label>Version Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <description>The version number of the current content set installed for the organization.</description>
        <label>Version Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Country</label>
    <nameField>
        <label>ISO-3N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>